[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "loopmate"
description = "Python looper"
version = "0.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["rehearsal", "audio"]
authors = [
{email = "tim@loderhose.com"},
{name = "Tim Loderhose"}
]
classifiers = [
"Programming Language :: Python :: 3",
]
dependencies = [
# For FX
"pedalboard",
# For MIDI
"python-rtmidi",
"numpy",
"scipy",
# For audio processing
"sounddevice",
# For audio file loading
"soundfile"
]

[project.optional-dependencies]
devtools = ["black", "black-macchiato", "mypy", "flake8", "isort", "python-lsp-server"]
dev = ["jupyter", "librosa", "matplotlib", "pandas"]

[tool.setuptools]
packages = ["loopmate"]

[tool.mypy]
python_version = "3.10"
